# cf_ai_project

./: PROMPTS.md  README.md
backend/: pyproject.toml  requirements.txt  run.py
backend/src/: app.py  db.py  models.py  scrape.py
backend/src/agent/: graph.py  workers.py
backend/src/rag/: embed.py  query.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Chat.css  Chat.jsx  index.css
